--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
     
-  flutter_svg: ^2.0.4
+  
   get: ^4.6.5
   http: ^0.13.5
   shared_preferences: ^2.0.20
@@ -40,7 +40,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  flutter_svg_provider: ^1.0.3
+  cached_network_image: ^3.2.3
+  permission_handler: ^10.2.0
+  image_picker: ^0.8.7+4
+  flutter_localizations:
+    sdk: flutter
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
