--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   file_picker: ^5.2.11
-      
+  flutter_file_downloader: ^1.1.2
+  dio: ^5.1.2
+       
 dev_dependencies:
   flutter_test:
     sdk: flutter
